# asus-px-keyboard-tool

./: .gitattributes  .gitignore  Cargo.toml  Readme.md  asus-px-keyboard-tool-restore.service  asus-px-keyboard-tool.conf  asus-px-keyboard-tool.service  asus-px-keyboard-tool.toml  build.rs  config.toml  config.yml  flake.nix  install.sh  uninstall.sh
.github/workflows/: release.yml
docs/: nix.md
src/: apkt_config.rs  bpf_loader.rs  config.rs  hid.rs  kb_illumination.rs  key_listener.rs  main.rs  myconfig.rs  state.rs
src/bpf/: common.h  hid_modify.bpf.c  hid_modify.bpf.h  hid_modify.skel.h  hid_modify.skel.rs  loader.c  loader.h  makefile  vmlinux.h
