[package]
name = "asus-px-keyboard-tool"
version = "0.1.0"
edition = "2021"
authors = ["Amit Chaudhari"]
description = "A tool to improve the functionality of the ASUS PX keyboard in Linux."
readme = "Readme.md"
repository = "https://github.com/a-chaudhari/asus-px-keyboard-tool"
categories = ["command-line-utilities", "hardware-support"]
keywords = ["asus", "keyboard", "linux", "hid", "evdev"]

[dependencies]
hidapi = "2.6.3"
evdev-rs = "0.6.2"
config = "0.15.14"
serde = { version = "1.0.219", features = ["derive"] }
libbpf-rs = "0.25"
plain = "0.2"
udev = "^0.9.3"

[build-dependencies]
libbpf-cargo = "0.25"
tracing-subscriber = "0.3.19"
